--- a/app/src/main/res/layout/activity_landing_page.xml
+++ b/app/src/main/res/layout/activity_landing_page.xml
@@ -4,23 +4,11 @@
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:orientation="horizontal" >
+    android:orientation="vertical"
+    android:weightSum="1">
 
 
-    <ImageButton
-        android:id="@+id/imageButtonCamera"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
 
-        android:src="@drawable/camerapng"
-        android:layout_gravity="center_vertical" />
-
-    <ImageButton
-    android:id="@+id/imageButtonGallery"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:src="@drawable/galleryjpg"
-        android:layout_gravity="center_vertical" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -32,6 +20,21 @@
         android:weightSum="1">
 
         <ImageButton
+            android:id="@+id/imageButtonCamera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:src="@drawable/camerapng"
+            android:layout_gravity="center_vertical" />
+
+        <ImageButton
+            android:id="@+id/imageButtonGallery"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/galleryjpg"
+            android:layout_gravity="center_vertical" />
+
+        <ImageButton
         android:id="@+id/imageButtonCollage"
         android:layout_width="48dp"
         android:layout_height="match_parent"
@@ -40,4 +43,23 @@
 
         </LinearLayout>
 
-</LinearLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="357dp"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:layout_gravity="bottom|center"
+        android:orientation="vertical"
+        android:weightSum="1"
+        android:layout_weight="8.25">
+
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign In"
+            android:id="@+id/signin_button"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
+    </LinearLayout>
