--- a/app/src/main/res/layout/activity_photo_editor.xml
+++ b/app/src/main/res/layout/activity_photo_editor.xml
@@ -4,22 +4,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:orientation="horizontal"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:weightSum="1"
-        android:id="@+id/linearLayout2">
-
         <ImageView
             android:id="@+id/imgView"
             android:layout_width="match_parent"
             android:layout_height="525dp" />
 
-    </LinearLayout>
 
     <HorizontalScrollView
         android:layout_width="682dp"
@@ -29,11 +18,10 @@
         android:visibility="visible"
         android:scrollIndicators="start|end"
         android:foregroundGravity="bottom"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="15dp"
-        android:layout_below="@+id/linearLayout2"
-        android:layout_alignParentStart="false">
+        android:layout_below="@+id/imgView"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentBottom="true">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
