--- a/app/src/main/res/layout/activity_google_sign_in.xml
+++ b/app/src/main/res/layout/activity_google_sign_in.xml
@@ -2,12 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
+    android:id="@+id/layout_google_sign_in"
     android:layout_height="fill_parent">
 
-    <ImageView
-        android:id="@+id/bg_google_signin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/sign_in_button"
