[working] Changed a typo of \

--- a/app/src/main/res/layout/activity_photo_editor.xml
+++ b/app/src/main/res/layout/activity_photo_editor.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:text="Adjustments"
             android:onClick="onClickAdjstmentBtn"
-            android:id="@+id/adjustment_button" />\
+            android:id="@+id/adjustment_button" />
 
         <Button
             android:layout_width="wrap_content"
