--- a/app/src/main/res/layout/activity_photo_editor.xml
+++ b/app/src/main/res/layout/activity_photo_editor.xml
@@ -1,180 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:keepScreenOn="true" >
 
-        <ImageView
-            android:id="@+id/imgView"
-            android:layout_width="match_parent"
-            android:layout_height="525dp"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/hsv_filters" />
-
-
-    <HorizontalScrollView
-        android:layout_width="682dp"
+    <ImageView
+        android:id="@+id/imgView"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/horizontalScrollView"
-        android:scrollbars="none"
-        android:visibility="visible"
-        android:scrollIndicators="start|end"
-        android:foregroundGravity="bottom"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/imgView"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentBottom="true">
+        android:layout_centerInParent="true"
+        android:onClick="toggleToolbox"
+        android:clickable="true"
+        android:contentDescription="Where the main image is loaded"
+        android:scaleType="centerInside" />
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom"
-            android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:weightSum="1">
+    <RelativeLayout
+        android:id="@+id/toolbox"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+        <!--
+        <include layout="@layout/holder_save" />
 
-            <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Age/Gender"
-            android:id="@+id/age_button" />
+        <include layout="@layout/holder_apply_filter" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Adjustments"
-            android:onClick="onClickAdjstmentBtn"
-            android:id="@+id/adjustment_button" />
+        <include layout="@layout/holder_hue" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onClickFilterBtn"
-            android:text="Filters"
-            android:id="@+id/filter_button" />
-        </LinearLayout>
-    </HorizontalScrollView>
+        <include layout="@layout/holder_saturation" />
 
+        <include layout="@layout/holder_flip" />
 
+        <include layout="@layout/holder_boost" />
 
-    <HorizontalScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/hsv_adjustments"
-        android:scrollbars="none"
-        android:visibility="gone"
-        android:layout_above="@+id/horizontalScrollView"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true">
+        <include layout="@layout/holder_brightness" />
 
+        <include layout="@layout/holder_contrast" />
 
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent">
+        <include layout="@layout/holder_gamma" />
 
+        <include layout="@layout/holder_cbalance" />
 
+        <include layout="@layout/holder_cdepth" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Crop"
-                android:id="@+id/crop_button"
-                android:layout_alignParentStart="true" />
+        <include layout="@layout/holder_tint" />
+        -->
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Autofix"
-                android:id="@+id/autofix_button"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="false"
-                android:layout_alignParentEnd="false"
-                android:layout_toEndOf="@id/crop_button" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Brightness"
-                android:id="@+id/brightness_button"
-                android:layout_toEndOf="@id/autofix_button" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Contrast"
-                android:id="@+id/contrast_button"
-                android:layout_alignParentEnd="false"
-                android:layout_toEndOf="@id/brightness_button" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Color"
-                android:id="@+id/color_button"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@id/contrast_button" />
-        </RelativeLayout>
-    </HorizontalScrollView>
-
-    <HorizontalScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none"
-        android:id="@+id/hsv_filters"
-        android:layout_above="@+id/horizontalScrollView"
-        android:visibility="gone"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true">
-
-        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sepia"
-                android:id="@+id/sepia_button"
-                android:layout_alignParentStart="true" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Monochrome"
-                android:id="@+id/monochrome_button"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/sepia_button" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="HDR"
-                android:id="@+id/hdr_button"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_toEndOf="@id/monochrome_button" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Monocolor"
-                android:id="@+id/monocolor_button"
-                android:layout_alignParentTop="true"
-                android:layout_toEndOf="@+id/hdr_button" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Inverse"
-                android:id="@+id/inverse_button"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="false"
-                android:layout_toEndOf="@id/monocolor_button" />
-        </RelativeLayout>
-    </HorizontalScrollView>
-
+        <include layout="@layout/holder_filters" />
+    </RelativeLayout>
 
 </RelativeLayout>
