--- a/app/src/main/res/layout/holder_level2.xml
+++ b/app/src/main/res/layout/holder_level2.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/effects_holder"
+    android:id="@+id/effects_holder2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
+    android:layout_above="@+id/effects_holder"
     android:background="#99000000"
     android:paddingTop="3dp" >
 
@@ -36,7 +37,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:contentDescription="@string/img_desc"
-                    android:src="@drawable/ic_face_detect" />
+                    android:src="@drawable/ic_effect_boost" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -48,7 +49,7 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:singleLine="true"
-                    android:text="@string/effect21"
+                    android:text="@string/effect14"
                     android:textColor="#ffffff"
                     android:textSize="16sp" />
             </RelativeLayout>
@@ -67,7 +68,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:contentDescription="@string/img_desc"
-                    android:src="@drawable/ic_adjust" />
+                    android:src="@drawable/ic_effect_brightness" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -79,7 +80,7 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:singleLine="true"
-                    android:text="@string/effect22"
+                    android:text="@string/effect1"
                     android:textColor="#ffffff"
                     android:textSize="16sp" />
             </RelativeLayout>
@@ -98,7 +99,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:contentDescription="@string/img_desc"
-                    android:src="@drawable/ic_filter" />
+                    android:src="@drawable/ic_effect_colordepth" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -110,7 +111,7 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:singleLine="true"
-                    android:text="@string/effect23"
+                    android:text="@string/effect12"
                     android:textColor="#ffffff"
                     android:textSize="16sp" />
             </RelativeLayout>
