[working] Two level ribbons working awesome.

--- a/app/src/main/res/layout/activity_photo_editor.xml
+++ b/app/src/main/res/layout/activity_photo_editor.xml
@@ -52,8 +52,15 @@
             android:layout_above="@+id/effects_holder"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+
             />
 
+        <include layout="@layout/holder_level_filter"
+            android:layout_above="@+id/effects_holder"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+
+            />
 
         <include layout="@layout/holder_filters" />
 
