--- a/app/src/main/res/layout/holder_level_filter.xml
+++ b/app/src/main/res/layout/holder_level_filter.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/effects_holder2"
+    android:id="@+id/effects_holder3"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:clickable="true"
@@ -28,9 +28,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:onClick="onClickEffectButton"
+                android:onClick="onClickFilterEffectButton"
                 android:layout_marginRight="5dp"
-                android:tag="Crop" >
+                android:tag="Sepia" >
 
                 <ImageView
                     android:id="@+id/effect_img14"
@@ -59,9 +59,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:onClick="onClickEffectButton"
+                android:onClick="onClickFilterEffectButton"
                 android:layout_marginRight="5dp"
-                android:tag="AutoFix" >
+                android:tag="Monochrome" >
 
                 <ImageView
                     android:id="@+id/effect_img1"
@@ -90,9 +90,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:onClick="onClickEffectButton"
+                android:onClick="onClickFilterEffectButton"
                 android:layout_marginRight="5dp"
-                android:tag="Brightness" >
+                android:tag="HDR" >
 
                 <ImageView
                     android:id="@+id/effect_img12"
@@ -121,9 +121,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:onClick="onClickEffectButton"
+                android:onClick="onClickFilterEffectButton"
                 android:layout_marginRight="5dp"
-                android:tag="Color" >
+                android:tag="Monocolor" >
 
                 <ImageView
                     android:id="@+id/effect_img11"
@@ -152,9 +152,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:onClick="onClickEffectButton"
+                android:onClick="onClickFilterEffectButton"
                 android:layout_marginRight="5dp"
-                android:tag="Contrast" >
+                android:tag="Inverse" >
 
                 <ImageView
                     android:id="@+id/effect_img35"
