--- a/app/src/main/res/layout/holder_level2.xml
+++ b/app/src/main/res/layout/holder_level2.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:onClick="onClickEffectButton"
+                android:onClick="onClickAdjButton"
                 android:layout_marginRight="5dp"
                 android:tag="Crop" >
 
@@ -59,7 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:onClick="onClickEffectButton"
+                android:onClick="onClickAdjButton"
                 android:layout_marginRight="5dp"
                 android:tag="AutoFix" >
 
@@ -90,7 +90,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:onClick="onClickEffectButton"
+                android:onClick="onClickAdjButton"
                 android:layout_marginRight="5dp"
                 android:tag="Brightness" >
 
@@ -121,7 +121,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:onClick="onClickEffectButton"
+                android:onClick="onClickAdjButton"
                 android:layout_marginRight="5dp"
                 android:tag="Color" >
 
@@ -152,7 +152,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:onClick="onClickEffectButton"
+                android:onClick="onClickAdjButton"
                 android:layout_marginRight="5dp"
                 android:tag="Contrast" >
 
