--- a/app/src/main/res/layout/holder_level_filter.xml
+++ b/app/src/main/res/layout/holder_level_filter.xml
@@ -81,7 +81,7 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:singleLine="true"
-                    android:text="@string/effect_adj_2"
+                    android:text="@string/effect2"
                     android:textColor="#ffffff"
                     android:textSize="16sp" />
             </RelativeLayout>
