--- a/app/src/main/res/layout/activity_display_collage.xml
+++ b/app/src/main/res/layout/activity_display_collage.xml
@@ -1,3 +1,8 @@
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -6,14 +11,22 @@
     android:paddingBottom="@dimen/activity_vertical_margin">
     <!--tools:context="com.example.sanchari.mccollage.DisplayCollageActivity"-->
     <ImageView
-       android:id="@+id/singleImageView"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:scaleType="center"
-       android:src="@drawable/rainbow"
-       android:background="@color/LightBlue"
-       android:layout_centerVertical="true"
-       android:layout_centerHorizontal="true">
-   </ImageView>
+        android:id="@+id/singleImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:scaleType="center"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/bg2_bak">
+    </ImageView>
 
-</RelativeLayout>
+    </RelativeLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:src="@drawable/ic_share"
+        />
+</android.support.design.widget.CoordinatorLayout>
