--- a/app/src/main/res/menu/menu_display_collage.xml
+++ b/app/src/main/res/menu/menu_display_collage.xml
@@ -2,6 +2,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.sanchari.mccollage.DisplayCollageActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"/>
-    <item android:id="@+id/action_share" android:title="@string/share"/>
+    <item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:orderInCategory="100"
+        app:showAsAction="always"/>
+    <item android:id="@+id/action_share"
+        android:title="@string/action_share"
+        android:orderInCategory="100"
+        app:showAsAction="always"/>
 </menu>
