--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,8 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="MyTheme" parent="android:Theme">
+        <item name="android:panelFullBackground">#000000</item>
+    </style>
+
 </resources>
