trying the logout.

--- a/app/src/main/res/layout/holder_filters.xml
+++ b/app/src/main/res/layout/holder_filters.xml
@@ -177,6 +177,37 @@
                     android:textSize="16sp" />
             </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:onClick="onClickEffectButton"
+                android:layout_marginRight="5dp"
+                android:tag="Logout" >
+
+                <ImageView
+                    android:id="@+id/effect_img_logout"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:contentDescription="@string/img_desc"
+                    android:src="@drawable/ic_face_detect" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/effect_img_logout"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:paddingBottom="5dp"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:singleLine="true"
+                    android:text="@string/effect21"
+                    android:textColor="#ffffff"
+                    android:textSize="16sp" />
+            </RelativeLayout>
+
 
         </LinearLayout>
     </HorizontalScrollView>
