--- a/app/src/main/res/layout/holder_filters.xml
+++ b/app/src/main/res/layout/holder_filters.xml
@@ -191,7 +191,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:contentDescription="@string/img_desc"
-                    android:src="@drawable/ic_face_detect" />
+                    android:src="@drawable/ic_launcher" />
 
                 <TextView
                     android:layout_width="wrap_content"
